cmake_minimum_required(VERSION 2.8)
find_package( OpenCV REQUIRED )
add_executable( mat mat_size.cpp )
target_link_libraries( mat ${OpenCV_LIBS} )
add_executable( com compress.cpp )
target_link_libraries( com ${OpenCV_LIBS} )
add_executable( color color_to_gray.cpp )
target_link_libraries( color ${OpenCV_LIBS} )

# for test, which generates less assembler code
add_executable( one one.cpp )
target_link_libraries( one ${OpenCV_LIBS} )
add_executable( two two.cpp )
target_link_libraries( two ${OpenCV_LIBS} )
add_executable( three three.cpp )
target_link_libraries( three ${OpenCV_LIBS} )
add_executable( four four.cpp )
target_link_libraries( four ${OpenCV_LIBS} )
add_executable( five five.cpp )
target_link_libraries( five ${OpenCV_LIBS} )